--- a/.env.example
+++ b/.env.example
@@ -33,3 +33,6 @@ PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
 PUSHER_APP_CLUSTER=mt1
+
+BAIDU_TRANSLATE_APPID=20180709000183972
+BAIDU_TRANSLATE_KEY=8FsVORA3azImEdRxigty
